added i18n-js gem for we can get i18n via js + updated design including media queries so the page is responsive + started on js to handle ui inputs

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,20 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+# Ignore application configuration
+/config/application.yml
+
+# Ignore Rubymine .idea file
+*.idea
+/.idea
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
